--- a/index.html
+++ b/index.html
@@ -18,7 +18,26 @@
 </head>
 
 <body>
-
+    <!-- Start Header Section -->
+    <div class="header">
+        <div class="container">
+            <img src="./public/images/logo.png" alt="leon-logo" class="logo">
+            <div class="links">
+                <span class="icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </span>
+                <ul>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- End Header Section -->
 </body>
 
 </html>
