--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -46,6 +50,33 @@
         </div>
     </div>
     <!-- End Landing Section -->
+    <!-- Start Feature Section-->
+    <div class="feature">
+        <div class="container">
+            <div class="feat">
+                <i class="fa-solid fa-wand-magic-sparkles fa-3x"></i>
+                <h3>Super Creative</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima porro, reiciendis provident
+                    consectetur cumque iste recusandae id, odio, iure et unde voluptatibus tempore rerum molestiae
+                    magnam eius. Molestias, maiores atque!</p>
+            </div>
+            <div class="feat">
+                <i class="fa-solid fa-lightbulb fa-3x"></i>
+                <h3>Tell Us Your Idea</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima porro, reiciendis provident
+                    consectetur cumque iste recusandae id, odio, iure et unde voluptatibus tempore rerum molestiae
+                    magnam eius. Molestias, maiores atque!</p>
+            </div>
+            <div class="feat">
+                <i class="fa-solid fa-chart-pie fa-3x"></i>
+                <h3>Best Performance</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima porro, reiciendis provident
+                    consectetur cumque iste recusandae id, odio, iure et unde voluptatibus tempore rerum molestiae
+                    magnam eius. Molestias, maiores atque!</p>
+            </div>
+        </div>
+    </div>
+    <!-- End Feature Section-->
 </body>
 
 </html>
