--- a/index.html
+++ b/index.html
@@ -77,6 +77,65 @@
         </div>
     </div>
     <!-- End Feature Section-->
+    <!-- Start Services Section-->
+    <div class="services">
+        <div class="container">
+            <h2 class="special-heading">Services</h2>
+            <p>Don't be busy, be productive</p>
+            <div class="services-content">
+                <div class="col">
+                    <!-- Start Services-->
+                    <div class="srv">
+                        <i class="fa-solid fa-palette fa-2x"></i>
+                        <div class="text">
+                            <h3>Graphic Design</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem odio, distinctio quas
+                                veniam ducimus vitae animi maxime possimus optio quo quia repellat sint doloremque alias
+                                sit sequi reprehenderit, ut cupiditate.</p>
+                        </div>
+                    </div>
+                    <div class="srv">
+                        <i class="fa-brands fa-sketch fa-2x"></i>
+                        <div class="text">
+                            <h3>UI & Ux</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem odio, distinctio quas
+                                veniam ducimus vitae animi maxime possimus optio quo quia repellat sint doloremque alias
+                                sit sequi reprehenderit, ut cupiditate.</p>
+                        </div>
+                    </div>
+                    <!-- End Services-->
+                </div>
+                <div class="col">
+                    <!-- Start Services-->
+                    <div class="srv">
+                        <i class="fa-solid fa-object-group fa-2x"></i>
+                        <div class="text">
+                            <h3>Web Design</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem odio, distinctio quas
+                                veniam ducimus vitae animi maxime possimus optio quo quia repellat sint doloremque alias
+                                sit sequi reprehenderit, ut cupiditate.</p>
+                        </div>
+                    </div>
+                    <div class="srv">
+                        <i class="fa-solid fa-code fa-2x"></i>
+                        <div class="text">
+                            <h3>Web Development</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem odio, distinctio quas
+                                veniam ducimus vitae animi maxime possimus optio quo quia repellat sint doloremque alias
+                                sit sequi reprehenderit, ut cupiditate.</p>
+                        </div>
+                    </div>
+                    <!-- End Services-->
+                </div>
+                <div class="col">
+                    <div class="image image-column">
+                        <img src="./public/images/services.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Services Section-->
 </body>
 
 </html>
