Portfolio & About Section
Complete Portfolio & About section with full responsive display, and use flex in about section (not grid).

--- a/index.html
+++ b/index.html
@@ -136,6 +136,72 @@
         </div>
     </div>
     <!-- End Services Section-->
+    <!-- Start Portfolio Section-->
+    <div class="portfolio">
+        <div class="container">
+            <h2 class="special-heading">Porfolio</h2>
+            <p>If we do it right, it will last forever</p>
+            <div class="portfolio-content">
+                <div class="card">
+                    <img src="./public/images/portfolio-1.jpg" alt="">
+                    <div class="info">
+                        <h3>Project Here</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam iure neque odio architecto
+                            autem
+                            voluptatibus, quasi numquam! Facilis, quasi assumenda quod doloribus labore illo doloremque
+                            velit atque inventore voluptatibus possimus?</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./public/images/portfolio-2.jpg" alt="">
+                    <div class="info">
+                        <h3>Project Here</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam iure neque odio architecto
+                            autem
+                            voluptatibus, quasi numquam! Facilis, quasi assumenda quod doloribus labore illo doloremque
+                            velit atque inventore voluptatibus possimus?</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./public/images/portfolio-3.jpg" alt="">
+                    <div class="info">
+                        <h3>Project Here</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam iure neque odio architecto
+                            autem
+                            voluptatibus, quasi numquam! Facilis, quasi assumenda quod doloribus labore illo doloremque
+                            velit atque inventore voluptatibus possimus?</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Portfolio Section-->
+    <!-- Start About Section-->
+    <div class="about">
+        <div class="container">
+            <h2 class="special-heading">About</h2>
+            <p>Less is more work</p>
+            <div class="about-content">
+                <div class="image">
+                    <img src="./public/images/about.jpg" alt="">
+                </div>
+
+                <div class="text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi dolorem voluptate doloribus
+                        dignissimos quis, delectus aliquam laborum incidunt eaque fugit ut hic autem corporis veniam
+                        nihil,
+                        inventore ab rem vel.</p>
+                    <hr>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus hic numquam sed commodi, sequi
+                        excepturi fugit consequatur accusamus dolorem qui expedita repellat similique necessitatibus
+                        quia
+                        magnam ab tempore, architecto ea.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End About Section-->
+
 </body>
 
 </html>
