--- a/index.html
+++ b/index.html
@@ -201,6 +201,29 @@
         </div>
     </div>
     <!-- End About Section-->
+    <!-- Start Contact Section-->
+    <div class="contact">
+        <div class="container">
+            <h2 class="special-heading">Contact</h2>
+            <p>We are born to create</p>
+            <div class="info">
+                <p class="label">Feel free to drop us a line at:</p>
+                <a href="mailto:leonagency@mail.com?subject=Contant" class="link">leonagency@mail.com</a>
+                <div class="social">
+                    Find Us on Social Network
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Contact Section-->
+    <!-- Start Footer Section-->
+    <div class="footer">
+        &copy; 2021 <span>Leon</span> All Right Reserved
+    </div>
+    <!-- End Footer Section-->
 
 </body>
 
