--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- End Landing Section -->
     <!-- Start Feature Section-->
     <div class="feature">
-        <div class="container">
+        <div class="container grid-sections">
             <div class="feat">
                 <i class="fa-solid fa-wand-magic-sparkles fa-3x"></i>
                 <h3>Super Creative</h3>
@@ -78,11 +78,11 @@
     </div>
     <!-- End Feature Section-->
     <!-- Start Services Section-->
-    <div class="services">
-        <div class="container">
+    <div class="services" id="services">
+        <div class="container ">
             <h2 class="special-heading">Services</h2>
             <p>Don't be busy, be productive</p>
-            <div class="services-content">
+            <div class="services-content grid-sections">
                 <div class="col">
                     <!-- Start Services-->
                     <div class="srv">
@@ -137,11 +137,11 @@
     </div>
     <!-- End Services Section-->
     <!-- Start Portfolio Section-->
-    <div class="portfolio">
+    <div class="portfolio" id="portfolio">
         <div class="container">
             <h2 class="special-heading">Porfolio</h2>
             <p>If we do it right, it will last forever</p>
-            <div class="portfolio-content">
+            <div class="portfolio-content grid-sections">
                 <div class="card">
                     <img src="./public/images/portfolio-1.jpg" alt="">
                     <div class="info">
@@ -177,7 +177,7 @@
     </div>
     <!-- End Portfolio Section-->
     <!-- Start About Section-->
-    <div class="about">
+    <div class="about" id="about">
         <div class="container">
             <h2 class="special-heading">About</h2>
             <p>Less is more work</p>
@@ -202,7 +202,7 @@
     </div>
     <!-- End About Section-->
     <!-- Start Contact Section-->
-    <div class="contact">
+    <div class="contact" id="contact">
         <div class="container">
             <h2 class="special-heading">Contact</h2>
             <p>We are born to create</p>
